--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  padding: 50px;
+  background: linear-gradient(
+    90deg,
+    #3E4C80 0%,
+    #6B76A0 100%
+  );
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.App {  
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.content-container {
+  background-color: #F4F7F7;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  min-width:35%;
+  max-width: 700px;
+  text-align: center;
+  padding: 30px;
+  margin: auto;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-form {
+  margin: 20px 0px;
+}
+
+.todo-input {
+  padding: 14px;
+  border-radius: 10px;
+  border: 2px solid #985D79;
+  color: #985D79;
+  width: 300px;
+  background-color: transparent;
+
+}
+
+.todo-input::placeholder {
+  color: #6B76A0;
+}
+
+.todo-input.edit {
+  border: 2px solid #861e4f;
+}
+
+.add-task-button {
+  margin-left: 20px;
+  color: #F4F7F7;
+  background-color: #985D79;
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 7px 12px;
+  border: transparent;
+  transition: 0.6s ease;
+
+}
+
+.add-task-button:hover {
+  background-color: #861e4f;
+  transition: 0.6s ease;
+
+}
+
+.todo-item-complete {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #6B76A0;
+  margin-bottom: 15px;
+  padding: 18px 25px;
+  font-size: large;
+  color: #F4F7F7;  
+  border-radius: 15px;
+  transition: 0.3s ease;
+}
+
+.todo-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #F36E62;
+  margin-bottom: 15px;
+  padding: 18px 25px;
+  font-size: large;
+  color: #F4F7F7;
+  border-radius: 15px;
+  transition: 0.3s ease;
+
+}
+
+.icons {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.delete-icon {
+  color: #F4F7F7;
 }
